--- a/Secciones/juegos.html
+++ b/Secciones/juegos.html
@@ -1,5 +1,110 @@
 <section class="page games-section">
-    <header>
-        <h1>Juegos</h1>
-        
+    <header class="games-header">
+        <h1 class="games-title">Juegos</h1>
+        <div class="games-header-decoration">
+            <span></span>
+        </div>
+    </header>
+    
+    <div class="tv-container">
+        <div class="responsive-wrapper">
+            <iframe 
+                src="https://tvlibreonline.net/agenda/" 
+                frameborder="0" 
+                loading="lazy"
+                title="TV Libre Online Agenda"
+                scrolling="yes"
+                sandbox="allow-scripts allow-same-origin allow-forms"
+                class="responsive-iframe">
+            </iframe>
+        </div>
+    </div>
+
+    <style>
+        .games-section {
+            padding: 1.5rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            background: #f9f9f9;
+        }
+
+        .games-header {
+            text-align: center;
+            margin-bottom: 1.5rem;
+        }
+
+        .games-title {
+            font-size: 2rem;
+            color: #222;
+            margin-bottom: 0.5rem;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-weight: 600;
+        }
+
+        .games-header-decoration span {
+            display: block;
+            width: 40px;
+            height: 3px;
+            background: #222;
+            margin: 0 auto;
+            border-radius: 2px;
+        }
+
+        .tv-container {
+            flex: 1;
+            background: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+            overflow: hidden;
+        }
+
+        .responsive-wrapper {
+            width: 100%;
+            height: calc(100vh - 120px);
+            min-height: 800px;
+        }
+
+        .responsive-iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        /* Estilos responsivos */
+        @media (max-width: 768px) {
+            .games-section {
+                padding: 1rem;
+            }
+
+            .responsive-wrapper {
+                height: calc(100vh - 100px);
+                min-height: 900px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .games-section {
+                padding: 0.5rem;
+            }
+
+            .games-title {
+                font-size: 1.75rem;
+            }
+
+            .responsive-wrapper {
+                height: calc(100vh - 80px);
+                min-height: 1000px; /* Más espacio para móviles */
+            }
+        }
+
+        @media (max-width: 360px) {
+            .responsive-wrapper {
+                min-height: 1200px; /* Aún más espacio para móviles pequeños */
+            }
+        }
+    </style>
 </section>
